add missing UnsettableProperty annotations